FirstPageStyle.css
/*desktop*/
@media screen and (min-width: 500px) {

    .flex-container-footer {
        flex-direction: row;
        left: 0;
        position: fixed;
        bottom: 0;
    }

    .nav {
        font-size: 18px;
        width: 25%;
    }

    .blockText {

        padding-right: 35%;
        padding-left: 35%;
    }

}

/*mobile*/
@media screen and (max-width: 500px) {


    .flex-container-middle {
        border: 10px blue;
        flex-wrap: wrap;
        min-height: 400px;
        display: contents;
    }

    .flex-container-footer {

        flex-direction: column;
        align-content: center;
        overflow: scroll;

    }

    .nav {
        font-size: 100%;
        width: 100%;
        right: 0;
        left: 0;
    }

    body {
        position: fixed;
    }

    .blockText {

        padding-left: 15%;
        padding-right: 15%;
    }
}

.allContainer {
    overflow: auto;
    flex-direction: column;
}

.flex-container-footer {
    display: flex;
    justify-content: space-evenly;
    background-color: #F9EAE1;
    width: 100%;
    margin: 0;
    padding: 0;
    align-content: baseline;
}

.flex-container-middle {
    background-color: white;
    justify-content: center;
    padding: 60px;
    height: 30%;
}

/*Desktop */
.nav {
    background-color: #F9EAE1;
    margin: 0;
    line-height: 250%;
}

.nav:hover {
    background-color: #D7C9AA;
}

.nav a {
    display: block;
}

.header {
    padding: 40px;
    text-align: center;
    background: #A20021;
    color: #F9EAE1;
    font-size: 20px;
    margin: 0;
}

.blockText {
    padding-top: 15px;
    padding-bottom: 15px;
    horiz-align: center;
    text-align: justify;
    background: #FFFFFF;
}

body {
    color: black;
    text-align: center;
    margin: 0;
    /*font-family: 'Raleway', sans-serif;*/
    background-color: #F9EAE1;
}

h1 {
    font-family: 'Permanent Marker', cursive;
    font-size: 50px;
}

header {
    background-color: #f9eae1;
}

a {
    color: black;
    text-decoration: none;
}

.theBigButton {
    margin-top: 2%;
    font-weight: bold;
    padding: 0 5%;
    background: #CC8B86;
    border: none;
    color: black;
    font-size: 150%;
    line-height: 60px;
}

button:hover {
    background: #DC9B96;
}

.banner {
    background: #A20021;
    height: 50px;
}

